fix preloader on mobile

--- a/client/stylesheets/estyle.css
+++ b/client/stylesheets/estyle.css
@@ -678,7 +678,7 @@ body {
   display: -webkit-box;
   /* max-width: 400px;*/
   /* Fallback for non-webkit */
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 
 }
